tests/errors/sem.arg-count-mismatch.fiicall-call.or
main :: () -> void {
    lib :: (@load "dynlib.or").lib_t.{
        "decl",
        "asdasda.a",
    };

    @fficall lib, void, "test", 10;
    @fficall lib, void, "test";
};
